feat: 매장 색인 폴링을 watermark 기반으로 개선
- 상대 시간 대신 watermark(마지막 성공 시각) 기준으로 조회하도록 변경
- 실행 지연 시 구간이 누락되던 슬라이딩 윈도우 문제 해결
- Core API 실패 시 예외를 전파하도록 수정, 기존엔 빈 리스트 반환으로 실패 구간이 유실됨